--- a/doc/1.6.md
+++ b/doc/1.6.md
@@ -14,7 +14,7 @@
                |- service        //  service目录   (非必需, 名称可自定义  可以把一些业务逻辑提取出来放到此)
                |- dao            //  dao目录       (非必需, 名称可自定义  主要可以做数据处理相关的逻辑)
                |- socket         //  socket回调目录 (非必需, 可通过config配置 , socket回调业务处理可以放在此目录)
-         |-  public
+         |-  webroot
                |- index.php     //统一入口文件
          |-  config
                |- default             //配置目录, 不同的项目可以指定不同的配置
